--- a/po/fr.po
+++ b/po/fr.po
@@ -348,7 +348,8 @@ msgstr "Appuyer sur CTRL-R à nouveau pour arrêter.\n"
 
 #: src/stel_ui.cpp:993
 msgid "Error: Unable to open script file to record commands."
-msgstr "Erreur: Impossible d'ouvrir le fichier script pour enregistrer les commandes."
+msgstr ""
+"Erreur: Impossible d'ouvrir le fichier script pour enregistrer les commandes."
 
 #: src/stel_ui_conf.cpp:37
 msgid "Configuration"
@@ -1769,4 +1770,3 @@ msgstr "Minutes"
 #: src/s_gui.cpp:2744
 msgid "Seconds"
 msgstr "Secondes"
-
