--- a/po/hu.po
+++ b/po/hu.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Stellarium 0.7.1\n"
 "Report-Msgid-Bugs-To: stellarium@free.fr\n"
-"POT-Creation-Date: 2006-04-30 20:54+0200\n"
-"PO-Revision-Date: 2006-03-26 11:00+0000\n"
+"POT-Creation-Date: 2006-04-30 22:57+0200\n"
+"PO-Revision-Date: 2006-04-28 20:21+0000\n"
 "Last-Translator: András Mohari <mayday@mailpont.hu>\n"
 "Language-Team: Hungarian\n"
 "MIME-Version: 1.0\n"
@@ -82,11 +82,11 @@ msgstr "Típus: "
 msgid "Size: "
 msgstr "Méret: "
 
-#: src/nebula_mgr.cpp:289
+#: src/nebula_mgr.cpp:291
 msgid "Loading NGC catalog: "
 msgstr "NGC-katalógus betöltése: "
 
-#: src/nebula_mgr.cpp:413
+#: src/nebula_mgr.cpp:415
 msgid "Loading Nebula Textures:"
 msgstr "Csillagködök textúráinak betöltése:"
 
@@ -187,14 +187,13 @@ msgid "Return to Current Time"
 msgstr "Vissza a jelenbe"
 
 #: src/stel_ui.cpp:636
-#, fuzzy
 msgid ""
 "   Please check for newer versions and send bug reports\n"
 "    and comments to us at: http://www.stellarium.org\n"
 "\n"
 msgstr ""
-"   Friss verziót keresel, hibát találtál, megjegyzésed\n"
-"van? Lásd a honlapot: http://www.stellarium.org\n"
+"   Újabb verziók a honlapról töltetők le, és ide küldhetők\n"
+"a hibajelentések, javaslatok is: http://www.stellarium.org\n"
 "\n"
 
 #: src/stel_ui.cpp:655
@@ -356,18 +355,16 @@ msgid "Star Twinkle. Amount :"
 msgstr "Csillagok vibrálása. Érték:"
 
 #: src/stel_ui_conf.cpp:90 src/stel_ui_tuiconf.cpp:179
-#, fuzzy
 msgid "Constellations Lines"
-msgstr "Csillagképek vonalai: "
+msgstr "Csillagképek vonalai"
 
 #: src/stel_ui_conf.cpp:95 src/stel_ui_tuiconf.cpp:183
 msgid "Constellations Names"
 msgstr "Csillagképek nevei"
 
 #: src/stel_ui_conf.cpp:100
-#, fuzzy
 msgid "Constellations Boundaries"
-msgstr "Csillagképek nevei"
+msgstr "Csillagképek határai"
 
 #: src/stel_ui_conf.cpp:105
 msgid "Selected Constellation Only"
@@ -505,14 +502,12 @@ msgid "For unlisted screen resolution, edit the file :"
 msgstr "Más felbontás ebben a fájlban adható meg:"
 
 #: src/stel_ui_conf.cpp:418
-#, fuzzy
 msgid "Choose landscapes:"
-msgstr "Tájkép választása:"
+msgstr "Tájkép:"
 
 #: src/stel_ui_conf.cpp:446
-#, fuzzy
 msgid "Program Language: "
-msgstr "Égbolt nyelve: "
+msgstr ""
 
 #: src/stel_ui_conf.cpp:462 src/stel_ui_tuiconf.cpp:156
 msgid "Sky Language: "
@@ -523,9 +518,8 @@ msgid "Sky Culture: "
 msgstr "Kultúrkör: "
 
 #: src/stel_ui_conf.cpp:501
-#, fuzzy
 msgid "Language"
-msgstr "Égbolt nyelve: "
+msgstr "Nyelv"
 
 #: src/stel_ui_conf.cpp:502
 msgid "Date & Time"
@@ -565,23 +559,23 @@ msgstr "Add meg a megfigyelőhely nevét"
 
 #: src/stel_ui_conf.cpp:897
 msgid ": Normal rate"
-msgstr ""
+msgstr ": Normál"
 
 #: src/stel_ui_conf.cpp:904
 msgid ": Standard Perseids rate"
-msgstr ""
+msgstr ": Szokásos Perzeidák"
 
 #: src/stel_ui_conf.cpp:911
 msgid ": Exceptional Leonid rate"
-msgstr ""
+msgstr ": Rendkívüli Leonidák"
 
 #: src/stel_ui_conf.cpp:918
 msgid ": Highest rate ever (1966 Leonids)"
-msgstr ""
+msgstr ": Az eddigi legnagyobb (1966-os Leonidák)"
 
 #: src/stel_ui_conf.cpp:923
 msgid "Meteor Rate per minute"
-msgstr ""
+msgstr "Percenkénti meteorgyakoriság"
 
 #: src/stel_ui_conf.cpp:944
 msgid "Current Time Speed is x"
@@ -633,7 +627,7 @@ msgstr "Magasság (m): "
 
 #: src/stel_ui_tuiconf.cpp:106
 msgid "Solar System Body: "
-msgstr ""
+msgstr "Naprendszerbeli égitest: "
 
 #: src/stel_ui_tuiconf.cpp:116
 msgid "Sky Time: "
@@ -853,7 +847,7 @@ msgstr "Charon"
 
 #: src/translations.h:60
 msgid "Solar System Observer"
-msgstr ""
+msgstr "Naprendszerbeli megfigyelő"
 
 #: src/translations.h:63 src/s_gui.cpp:2658
 msgid "N"
@@ -1225,16 +1219,15 @@ msgstr "Vitorla"
 
 #: src/translations.h:160
 msgid "Bull's Foreleg"
-msgstr ""
+msgstr "Ökörcomb"
 
 #: src/translations.h:161
 msgid "Two Poles"
 msgstr ""
 
 #: src/translations.h:162
-#, fuzzy
 msgid "Lion"
-msgstr "Orion"
+msgstr "Oroszlán"
 
 #: src/translations.h:163
 msgid "Two Jaws"
@@ -1242,59 +1235,55 @@ msgstr ""
 
 #: src/translations.h:164
 msgid "Sah"
-msgstr ""
+msgstr "Sah"
 
 #: src/translations.h:165
 msgid "Bird"
-msgstr ""
+msgstr "Madár"
 
 #: src/translations.h:166
 msgid "Sek"
-msgstr ""
+msgstr "Sek"
 
 #: src/translations.h:167
-#, fuzzy
 msgid "Triangle"
 msgstr "Háromszög"
 
 #: src/translations.h:168
 msgid "Ferry Boat"
-msgstr ""
+msgstr "Révhajó"
 
 #: src/translations.h:169 src/translations.h:240
-#, fuzzy
 msgid "Boat"
-msgstr "Ökörhajcsár"
+msgstr "Csónak"
 
 #: src/translations.h:170
 msgid "Crocodile"
-msgstr ""
+msgstr "Krokodil"
 
 #: src/translations.h:171
 msgid "Selkis"
-msgstr ""
+msgstr "Szelket"
 
 #: src/translations.h:172
 msgid "Prow"
-msgstr ""
+msgstr "Hajóorr"
 
 #: src/translations.h:173
-#, fuzzy
 msgid "Horus"
-msgstr "Holló"
+msgstr "Hórusz"
 
 #: src/translations.h:174
 msgid "Sheepfold"
 msgstr ""
 
 #: src/translations.h:175
-#, fuzzy
 msgid "Giant"
-msgstr "Titan"
+msgstr "Óriás"
 
 #: src/translations.h:176
 msgid "Hippopotamus"
-msgstr ""
+msgstr "Víziló"
 
 #: src/translations.h:177
 msgid "Flock"
@@ -1302,16 +1291,15 @@ msgstr ""
 
 #: src/translations.h:178
 msgid "Pair of Stars"
-msgstr ""
+msgstr "Csillagpár"
 
 #: src/translations.h:179
 msgid "Khanuwy Fish"
 msgstr ""
 
 #: src/translations.h:180 src/translations.h:219
-#, fuzzy
 msgid "Net"
-msgstr "Neptunusz"
+msgstr "Háló"
 
 #: src/translations.h:181
 msgid "Jaw"
@@ -1323,7 +1311,7 @@ msgstr ""
 
 #: src/translations.h:183
 msgid "Kenemet"
-msgstr ""
+msgstr "Kenemet"
 
 #: src/translations.h:184
 msgid "Chematy"
@@ -1331,20 +1319,19 @@ msgstr ""
 
 #: src/translations.h:185
 msgid "Waty Bekety"
-msgstr ""
+msgstr "Waty Bekety"
 
 #: src/translations.h:186
 msgid "Sheep"
 msgstr ""
 
 #: src/translations.h:187
-#, fuzzy
 msgid "Stars of Water"
-msgstr "Csillagok "
+msgstr "Vizek Csillagai"
 
 #: src/translations.h:190
 msgid "Northern Dipper"
-msgstr ""
+msgstr "Északi Merítő"
 
 #: src/translations.h:191
 msgid "Curved Array"
@@ -1359,9 +1346,8 @@ msgid "Wings"
 msgstr ""
 
 #: src/translations.h:194
-#, fuzzy
 msgid "Chariot"
-msgstr "Charon"
+msgstr ""
 
 #: src/translations.h:195
 msgid "Tail"
@@ -1373,11 +1359,11 @@ msgstr ""
 
 #: src/translations.h:197
 msgid "Dipper"
-msgstr ""
+msgstr "Merítő"
 
 #: src/translations.h:198
 msgid "Drum"
-msgstr ""
+msgstr "Dob"
 
 #: src/translations.h:199
 msgid "Three Steps"
@@ -1388,9 +1374,8 @@ msgid "Imperial Guards"
 msgstr ""
 
 #: src/translations.h:201
-#, fuzzy
 msgid "Horn"
-msgstr "Kemence"
+msgstr ""
 
 #: src/translations.h:202
 msgid "Willow"
@@ -1410,26 +1395,23 @@ msgstr ""
 
 #: src/translations.h:206
 msgid "Stomach"
-msgstr ""
+msgstr "Gyomor"
 
 #: src/translations.h:207
-#, fuzzy
 msgid "Great General"
-msgstr "Általános "
+msgstr ""
 
 #: src/translations.h:208
 msgid "Wall"
-msgstr ""
+msgstr "Fal"
 
 #: src/translations.h:209
-#, fuzzy
 msgid "Legs"
-msgstr "Nyúl"
+msgstr ""
 
 #: src/translations.h:210
-#, fuzzy
 msgid "Root"
-msgstr "Ökörhajcsár"
+msgstr ""
 
 #: src/translations.h:211
 msgid "Ramparts"
@@ -1444,18 +1426,16 @@ msgid "Outer Fence"
 msgstr ""
 
 #: src/translations.h:214
-#, fuzzy
 msgid "Ford"
-msgstr "Kemence"
+msgstr "Gázló"
 
 #: src/translations.h:215
 msgid "Seven Excellencies"
 msgstr ""
 
 #: src/translations.h:216
-#, fuzzy
 msgid "Market"
-msgstr "Mars"
+msgstr "Piac"
 
 #: src/translations.h:217
 msgid "Five Chariots"
@@ -1470,9 +1450,8 @@ msgid "Toilet"
 msgstr ""
 
 #: src/translations.h:221
-#, fuzzy
 msgid "Screen"
-msgstr "Kígyó"
+msgstr ""
 
 #: src/translations.h:222
 msgid "Soldiers Market"
@@ -1483,9 +1462,8 @@ msgid "Square Granary"
 msgstr ""
 
 #: src/translations.h:224
-#, fuzzy
 msgid "Three Stars"
-msgstr "Csillagok"
+msgstr "Három Csillag"
 
 #: src/translations.h:225
 msgid "Four Channels"
@@ -1497,11 +1475,11 @@ msgstr ""
 
 #: src/translations.h:227
 msgid "South River"
-msgstr ""
+msgstr "Déli Folyó"
 
 #: src/translations.h:228
 msgid "North River"
-msgstr ""
+msgstr "Északi Folyó"
 
 #: src/translations.h:229
 msgid "Five Feudal Kings"
@@ -1509,7 +1487,7 @@ msgstr ""
 
 #: src/translations.h:230
 msgid "Orchard"
-msgstr ""
+msgstr "Gyümölcsöskert"
 
 #: src/translations.h:231
 msgid "Meadows"
@@ -1521,20 +1499,19 @@ msgstr ""
 
 #: src/translations.h:233
 msgid "Purple Palace"
-msgstr ""
+msgstr "Lila Palota"
 
 #: src/translations.h:234
 msgid "Extended Net"
 msgstr ""
 
 #: src/translations.h:235
-#, fuzzy
 msgid "Arsenal"
-msgstr "Oltár"
+msgstr ""
 
 #: src/translations.h:236
 msgid "Hook"
-msgstr ""
+msgstr "Horog"
 
 #: src/translations.h:237
 msgid "Supreme Palace"
@@ -1542,176 +1519,169 @@ msgstr ""
 
 #: src/translations.h:238
 msgid "Jade Well"
-msgstr ""
+msgstr "Jade-kút"
 
 #: src/translations.h:239
-#, fuzzy
 msgid "Lance"
-msgstr "Rák"
+msgstr ""
 
 #: src/translations.h:241
 msgid "Mausoleum"
-msgstr ""
+msgstr "Mauzóleum"
 
 #: src/translations.h:242
-#, fuzzy
 msgid "Dog"
-msgstr "Köd"
+msgstr "Kutya"
 
 #: src/translations.h:243
 msgid "Earth God's Temple"
-msgstr ""
+msgstr "Földisten Temploma"
 
 #: src/translations.h:244
 msgid "Bow and Arrow"
-msgstr ""
+msgstr "Íj és Nyíl"
 
 #: src/translations.h:245
-#, fuzzy
 msgid "Pestle"
-msgstr "Perzeusz"
+msgstr "Mozsártörő"
 
 #: src/translations.h:246
-#, fuzzy
 msgid "Mortar"
-msgstr "Mars"
+msgstr "Mozsár"
 
 #: src/translations.h:247
 msgid "Rooftop"
-msgstr ""
+msgstr "Tető"
 
 #: src/translations.h:248
 msgid "Thunderbolt"
-msgstr ""
+msgstr "Villámlás"
 
 #: src/translations.h:249
-#, fuzzy
 msgid "Chariot Yard"
-msgstr "Térkép mód"
+msgstr ""
 
 #: src/translations.h:250
 msgid "Good Gourd"
-msgstr ""
+msgstr "Jó Tök"
 
 #: src/translations.h:251
 msgid "Rotten Gourd"
-msgstr ""
+msgstr "Rohadt Tök"
 
 #: src/translations.h:252
 msgid "Encampment"
-msgstr ""
+msgstr "Táborhely"
 
 #: src/translations.h:253
 msgid "Thunder and Lightning"
-msgstr ""
+msgstr "Villámlás és Mennydörgés"
 
 #: src/translations.h:254
 msgid "Palace Gate"
-msgstr ""
+msgstr "Várkapu"
 
 #: src/translations.h:255
 msgid "Emptiness"
-msgstr ""
+msgstr "Üresség"
 
 #: src/translations.h:256
 msgid "Weaving Girl"
-msgstr ""
+msgstr "Integető Lány"
 
 #: src/translations.h:257
 msgid "Girl"
-msgstr ""
+msgstr "Lány"
 
 #: src/translations.h:258
 msgid "Ox"
-msgstr ""
+msgstr "Ökör"
 
 #: src/translations.h:259
-#, fuzzy
 msgid "Heart"
-msgstr "Föld"
+msgstr "Szív"
 
 #: src/translations.h:260
 msgid "Room"
-msgstr ""
+msgstr "Szoba"
 
 #: src/translations.h:261
 msgid "Spring"
-msgstr ""
+msgstr "Tavasz"
 
 #: src/translations.h:262
 msgid "Establishment"
-msgstr ""
+msgstr "Alapítás"
 
 #: src/translations.h:263
 msgid "Flail"
-msgstr ""
+msgstr "Láncos Buzogány"
 
 #: src/translations.h:264
-#, fuzzy
 msgid "Spear"
-msgstr "Csillagok"
+msgstr "Dárda"
 
 #: src/translations.h:265
+#, fuzzy
 msgid "Right Flag"
-msgstr ""
+msgstr "jobboldali kapcsoló"
 
 #: src/translations.h:266
+#, fuzzy
 msgid "Left Flag"
-msgstr ""
+msgstr "baloldali kapcsoló"
 
 #: src/translations.h:267
 msgid "Drumstick"
-msgstr ""
+msgstr "Dobverő"
 
 #: src/translations.h:268
-#, fuzzy
 msgid "Bond"
-msgstr "Földfelszín"
+msgstr ""
 
 #: src/translations.h:269
 msgid "Woman's Bed"
-msgstr ""
+msgstr "Női Ágy"
 
 #: src/translations.h:270
 msgid "Western Door"
-msgstr ""
+msgstr "Nyugati Kapu"
 
 #: src/translations.h:271
 msgid "Eastern Door"
-msgstr ""
+msgstr "Keleti Kapu"
 
 #: src/translations.h:272
 msgid "Farmland"
 msgstr ""
 
 #: src/translations.h:273
-#, fuzzy
 msgid "Star"
-msgstr "Csillagok"
+msgstr "Csillag"
 
 #: src/translations.h:274
 msgid "Ghosts"
-msgstr ""
+msgstr "Szellemek"
 
 #: src/translations.h:275
 msgid "Xuanyuan"
-msgstr ""
+msgstr "Xuanyuan"
 
 #: src/translations.h:276
 msgid "Tripod"
-msgstr ""
+msgstr "Háromlábú Állvány"
 
 #: src/translations.h:277
 msgid "Neck"
-msgstr ""
+msgstr "Nyak"
 
 #: src/translations.h:278
 msgid "Zaofu"
-msgstr ""
+msgstr "Zaofu"
 
 #: src/translations.h:279
 msgid "Market Officer"
-msgstr ""
+msgstr "Piacfelügyelő"
 
 #: src/translations.h:280
 msgid "Banner of Three Stars"
@@ -1721,93 +1691,84 @@ msgstr ""
 msgid "Bailer"
 msgstr ""
 
+# XXX: polinéziai
 #: src/translations.h:284
 msgid "Cat's Cradle"
-msgstr ""
+msgstr "Macskabölcső"
 
 #: src/translations.h:285
 msgid "Voice of Joy"
-msgstr ""
+msgstr "Öröm Hangja"
 
 #: src/translations.h:286
 msgid "The Seven"
-msgstr ""
+msgstr "A Hetek"
 
 #: src/translations.h:287
 msgid "Maui's Fishhook"
-msgstr ""
+msgstr "Maui horga"
 
 #: src/translations.h:288
+#, fuzzy
 msgid "Navigator's Triangle"
-msgstr ""
+msgstr "A nyári háromszög (Altair, Deneb és Vega)"
 
 #: src/translations.h:289
 msgid "Kite of Kawelo"
-msgstr ""
+msgstr "Kawelo Sárkánya"
 
 #: src/translations.h:290
 msgid "Frigate Bird"
-msgstr ""
+msgstr "Fregattmadár"
 
 #: src/translations.h:291
 msgid "Cared for by Moon"
 msgstr ""
 
 #: src/translations.h:292
-#, fuzzy
 msgid "Dolphin"
 msgstr "Delfin"
 
 #: src/s_gui.cpp:2199 src/s_gui.cpp:2245
-#, fuzzy
 msgid "Cancel"
-msgstr "Rák"
+msgstr "Mégsem"
 
 #: src/s_gui.cpp:2217 src/s_gui.cpp:2243
 msgid "OK"
-msgstr ""
+msgstr "OK"
 
 #: src/s_gui.cpp:2729
 msgid "Year"
-msgstr ""
+msgstr "Év"
 
 #: src/s_gui.cpp:2732
-#, fuzzy
 msgid "Month"
-msgstr "Hold"
+msgstr "Hónap"
 
 #: src/s_gui.cpp:2735
 msgid "Day"
-msgstr ""
+msgstr "Nap"
 
 #: src/s_gui.cpp:2738
 msgid "Hour"
-msgstr ""
+msgstr "Óra"
 
 #: src/s_gui.cpp:2741
 msgid "Minutes"
-msgstr ""
+msgstr "Perc"
 
 #: src/s_gui.cpp:2744
 msgid "Seconds"
-msgstr ""
+msgstr "Másodperc"
 
-#, fuzzy
+#~ msgid "Program language:"
+#~ msgstr "A program nyelve:"
+
 #~ msgid "Sky language:"
-#~ msgstr "Égbolt nyelve: "
+#~ msgstr "Az ég nyelve:"
 
-#, fuzzy
 #~ msgid "Sky culture:"
-#~ msgstr "Kultúrkör: "
-
-#~ msgid "Constellation lines: "
-#~ msgstr "Csillagképek vonalai: "
-
-#~ msgid "Constellation labels: "
-#~ msgstr "Csillagképek címkéi: "
-
-#~ msgid "Cardinal points: "
-#~ msgstr "Égtájak: "
+#~ msgstr "Kultúrkör:"
 
 #~ msgid "Star No./Name"
 #~ msgstr "Csillag sz./neve"
@@ -1824,13 +1785,14 @@ msgstr ""
 #~ msgid "eg. Crux"
 #~ msgstr "pl. Déli Kereszt"
 
-#, fuzzy
 #~ msgid "Object No :"
-#~ msgstr "Vetület:"
+#~ msgstr "Égitest száma:"
 
-#, fuzzy
+#~ msgid "e.g. : 1432, 83"
+#~ msgstr "pl.: 1432, 83"
+
 #~ msgid "Choose a catalog :"
-#~ msgstr "Tájkép választása:"
+#~ msgstr "Katalógus:"
 
 #~ msgid "Planet/Moon"
 #~ msgstr "Bolygó/hold"
@@ -1844,9 +1806,14 @@ msgstr ""
 #~ msgid "Planets & Moons"
 #~ msgstr "Bolygók és holdak"
 
-#, fuzzy
-#~ msgid "Magnitude "
-#~ msgstr "Fényesség: "
+#~ msgid "Constellation lines: "
+#~ msgstr "Csillagképek vonalai: "
+
+#~ msgid "Constellation labels: "
+#~ msgstr "Csillagképek címkéi: "
+
+#~ msgid "Cardinal points: "
+#~ msgstr "Égtájak: "
 
 #~ msgid "Message"
 #~ msgstr "Üzenet"
@@ -1857,14 +1824,17 @@ msgstr ""
 #~ msgid "Constellations"
 #~ msgstr "Csillagképek"
 
+#~ msgid "Fisheye Projection Mode"
+#~ msgstr "Halszem vetület"
+
+#~ msgid "Choose landscapes :"
+#~ msgstr "Tájkép választása:"
+
 #~ msgid "Please save option in tab \"Location\""
 #~ msgstr "A \"Hely\" fül beállításainak elmentésével"
 
 #~ msgid "to save current landscape as the default landscape."
 #~ msgstr "tehető alapértelmezetté a jelenlegi tájkép."
-
-#~ msgid "Fisheye Projection Mode"
-#~ msgstr "Halszem vetület"
 
 #~ msgid "eg. M83, NGC 7009, IC 2118"
 #~ msgstr "pl. M83, NGC 7009, IC 2118"
